10/28/2003 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update order of things

version 0.4.0 (10/28/2003):

10/28/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Add new release date and version.

10/15/2003 Mike Mueller <mmueller@cs.uri.edu>

    * NEWS: Adding :set wrapscan (ws) option.

10/10/2003 Bob Rossi <bob@brasko.net>

    * Adding doc directory.

10/09/2003 Mike Mueller <mmueller@cs.uri.edu>

    * NEWS: Fixed 'next search' bug where it jumps to the top of the buffer
            when there was no previous search expression.  Also made searches
            wrap around the top/bottom of file.  Hope this is what everyone
            else wants, because I sure do.

09/28/2003 Bob Rossi <bob@brasko.net>

    * NEWS: TGDB now returns TGDB_ABSOLUTE_SOURCE_DENIED when file is not
	available. This is a bug fix.

09/24/2003 Bob Rossi <bob@brasko.net>

    * NEWS: TGDB no checks breakpoints on startup. 

09/23/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed searching bug for CGDB.

09/12/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed crash for when TGDB would try to parse watchpoints.

09/10/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Add new feature. showtgdbcommands.
	* README: Documented new feature, showtgdbcommands.

09/09/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed TGDB bug. TGDB will not return an extra newline when the
	user runs commands many through the GUI fast.

08/27/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed TGDB bug. TGDB will now return the correct line number
	when the user starts gdb with a .gdbinit. Before it would display line 1.

08/20/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. The file dialog window works when the inferior
	was compiled without debug.

08/19/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. Breakpoints are now displayed in CGDB window.

08/17/2003 Bob Rossi <bob@brasko.net>

	* configure.in: Changed version number to 0.3.4-cvs.