@@ -1,3 +1,10 @@
+11/16/2003 Bob Rossi <bob@brasko.net>
+
+   * a2-tgdb.h: Remove the prototype a2_command_callback
+   * a2-tgdb.c: Remove the implementation of a2_command_callback
+   * tgdb_client_interface.c: changed 'a2_command_callback' to
+   'a2_completion_callback'
+
 version 0.4.0 (10/28/2003):
 
 10/28/2003 Bob Rossi <bob@brasko.net>
