@@ -1,3 +1,7 @@
+11/16/2003 Bob Rossi <bob@brasko.net>
+
+   	* NEWS: Update for tab completion bug fix in cgdb-0.4.0
+
 10/28/2003 Bob Rossi <bob@brasko.net>
 
     * release-todo.txt: Update order of things
